Updated copy in Our Story section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- About Section -->
     <div id="section-started" class="text-center pt-5 pb-5">
       <div class="container">
-        <h2 class="mb-5">How It Started</h2>
+        <h2 class="mb-5">Our Story</h2>
         <!-- <p class="lead">It began in Lewis County, NY</p> -->
         <p class="pb-5">
           It began in Lewis County, NY when one generous person decided to buy eggs from a farm that
@@ -117,13 +117,14 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">
-            A generous community
+            Supported by a generous community
             <!-- <span class="text-muted">It'll blow your mind.</span> -->
           </h2>
           <p class="lead">
-            Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-            dapibus, tellus ac cursus commodo.
+            Inspired to support our local farmers, prevent good food from going to waste, and get
+            healthy foods to local families that need it, our wonderful community has jumped in and
+            generously donated to our GoFundMe campaign to so we can procure excess farm foods to be
+            added to the South Lewis Central School meal delivery program.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
@@ -150,9 +151,11 @@
             <!-- <span class="text-muted">See for yourself.</span> -->
           </h2>
           <p class="lead">
-            Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-            dapibus, tellus ac cursus commodo.
+            A team made up of school employees, farmers, and local agriculture experts has formed to
+            find local surplus farm foods and get them delivered to local families. Some tech and
+            business experts from across the country are also involved from
+            <a href="https://covidaccelerator.com">COVID Accelerator</a> to help put in place the
+            needed technology and scale Farm to Community to more areas.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
@@ -179,9 +182,13 @@
             <!-- <span class="text-muted">Checkmate.</span> -->
           </h2>
           <p class="lead">
-            Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-            euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-            dapibus, tellus ac cursus commodo.
+            So far we've arranged deliveries of maple syrup, eggs, cheese sticks, and local produce
+            to the families of the South Lewis Central School district, and were featured in the
+            local
+            <a
+              href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
+              >Watertown Daily Times</a
+            >
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
