--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="#section-what">What We Do</a>
           </li>
           <li class="nav-item">
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="jumbotron jumbotron-fluid text-center mb-0">
+    <div class="jumbotron jumbotron-fluid text-center mb-0" id="section-hero">
       <div class="container">
         <h1 class="display-4">Connecting Farms to Families</h1>
         <p class="lead">
@@ -136,7 +136,7 @@
         <div class="col-md-5">
           <img
             class="featurette-image img-fluid mx-auto"
-            src="images/placeholder.svg"
+            src="images/backpack_01.jpg"
             alt="Generic placeholder image"
           />
         </div>
@@ -167,7 +167,7 @@
         <div class="col-md-5 order-md-1">
           <img
             class="featurette-image img-fluid mx-auto"
-            src="images/placeholder.svg"
+            src="images/milk-labels_01.jpg"
             alt="Generic placeholder image"
           />
         </div>
@@ -200,7 +200,7 @@
         <div class="col-md-5">
           <img
             class="featurette-image img-fluid mx-auto"
-            src="images/placeholder.svg"
+            src="images/egg-delivery_01.svg"
             alt="Generic placeholder image"
           />
         </div>
