Fix: broken image link

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="col-md-5">
           <img
             class="featurette-image img-fluid mx-auto"
-            src="images/egg-delivery_01.svg"
+            src="images/egg-delivery_01.jpg"
             alt="Generic placeholder image"
           />
         </div>
