--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
           Farmers are struggling. Food is going to waste. Many families are hungry. <br />
           Let's help connect the dots.
         </p>
-        <a class="btn btn-success btn-lg" href="#" role="button">Join Us</a>
+        <a
+          class="btn btn-success btn-lg"
+          href="https://airtable.com/shrGgLrhqdGIaRNB9"
+          role="button"
+          >Join Us</a
+        >
       </div>
     </div>
 
@@ -88,9 +93,8 @@
       </div>
     </div>
 
-    <hr />
     <!-- About Section -->
-    <div id="section-started" class="text-center pt-5 pb-5">
+    <div id="section-started" class="text-center">
       <div class="container">
         <h2 class="mb-5">Our Story</h2>
         <!-- <p class="lead">It began in Lewis County, NY</p> -->
@@ -111,8 +115,8 @@
     </div>
 
     <!-- Featurettes -->
-    <div class="container">
-      <hr class="featurette-divider" />
+    <div id="section-featurettes" class="container">
+      <!-- <hr class="featurette-divider" /> -->
 
       <div class="row featurette">
         <div class="col-md-7">
@@ -175,7 +179,7 @@
 
       <hr class="featurette-divider" />
 
-      <div class="row featurette pb-5">
+      <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">
             Connecting the Dots
@@ -220,7 +224,9 @@
         like to volunteer to help organize a program in your area, click below to join us and help
         connect more families with local, healthy foods.
       </p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Join Us</a>
+      <a class="btn btn-success btn-lg" href="https://airtable.com/shrGgLrhqdGIaRNB9" role="button"
+        >Join Us</a
+      >
     </div>
 
     <!-- Optional JavaScript -->
