Color & copy updates

--- a/index.html
+++ b/index.html
@@ -99,18 +99,22 @@
         <h2 class="mb-5">Our Story</h2>
         <!-- <p class="lead">It began in Lewis County, NY</p> -->
         <p class="pb-5">
-          It began in Lewis County, NY when one generous person decided to buy eggs from a farm that
-          were going to otherwise go to waste, and donate them to the South Lewis school meal
-          delivery program to get them to local families in need.
+          In early April, when the COVID-19 pandemic forced restaurants and schools to shut down,
+          and farmers were being forced to dump milk and throw out good food, one generous person in
+          Lewis County, NY decided to buy eggs from a farm that were otherwise going to waste and
+          donate them to the South Lewis school meal delivery program to get them to local families
+          in need.
         </p>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/X4xz03s8lq8"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div class="video-responsive">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/X4xz03s8lq8"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
     </div>
 
@@ -126,9 +130,9 @@
           </h2>
           <p class="lead">
             Inspired to support our local farmers, prevent good food from going to waste, and get
-            healthy foods to local families that need it, our wonderful community has jumped in and
-            generously donated to our GoFundMe campaign to so we can procure excess farm foods to be
-            added to the South Lewis Central School meal delivery program.
+            healthy foods to local families that need them, our wonderful community has risen to the
+            cause and generously donated to our GoFundMe campaign to sponsor the addition of
+            healthy, local farm foods to the South Lewis Central School meal delivery program.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
@@ -155,11 +159,11 @@
             <!-- <span class="text-muted">See for yourself.</span> -->
           </h2>
           <p class="lead">
-            A team made up of school employees, farmers, and local agriculture experts has formed to
-            find local surplus farm foods and get them delivered to local families. Some tech and
-            business experts from across the country are also involved from
-            <a href="https://covidaccelerator.com">COVID Accelerator</a> to help put in place the
-            needed technology and scale Farm to Community to more areas.
+            A team of school employees, farmers, agriculture experts and other volunteers formed to
+            find local surplus farm foods and get them delivered to local families. A handful of
+            tech and business experts from across the country also got involved through
+            <a href="https://covidaccelerator.com">COVID Accelerator</a>, putting technologies in
+            place to make the process more efficient and help scale Farm to Community to more areas.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
@@ -186,9 +190,9 @@
             <!-- <span class="text-muted">Checkmate.</span> -->
           </h2>
           <p class="lead">
-            So far we've arranged deliveries of maple syrup, eggs, cheese sticks, and local produce
-            to the families of the South Lewis Central School district, and were featured in the
-            local
+            So far we've arranged deliveries of local milk, maple syrup, eggs, cheese sticks, and
+            fresh produce to the families of the South Lewis Central School district. We were
+            recently featured in the local
             <a
               href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
               >Watertown Daily Times</a
@@ -213,18 +217,20 @@
     <!-- /END THE FEATURETTES -->
 
     <!-- Join Us CTA -->
-    <div class="jumbotron text-center" id="section-join">
+    <div class="jumbotron text-center mb-0" id="section-join">
       <h2 class="display-4">Let's help more farmers and families</h2>
       <p class="lead">
-        We need your help to grow Farm to Community to more meal delivery programs and regions, so
-        that we can reach help more struggling farmers and more families in need.
+        We need your help to grow Farm to Community to more meal delivery programs and regions
       </p>
       <p>
         Whether you're a farmer with excess products to contribute, a food bank owner, or would just
         like to volunteer to help organize a program in your area, click below to join us and help
         connect more families with local, healthy foods.
       </p>
-      <a class="btn btn-success btn-lg" href="https://airtable.com/shrGgLrhqdGIaRNB9" role="button"
+      <a
+        class="btn btn-success btn-lg mt-3"
+        href="https://airtable.com/shrGgLrhqdGIaRNB9"
+        role="button"
         >Join Us</a
       >
     </div>
