--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/40ffc7245d.js" crossorigin="anonymous"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167745315-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-167745315-1");
+    </script>
+
     <title>Farm to Community</title>
   </head>
   <body>
