--- a/index.html
+++ b/index.html
@@ -229,22 +229,24 @@
     <!-- /END THE FEATURETTES -->
 
     <!-- Join Us CTA -->
-    <div class="jumbotron text-center mb-0" id="section-join">
-      <h2 class="display-4">Let's help more farmers and families</h2>
-      <p class="lead">
-        We need your help to grow Farm to Community to more meal delivery programs and regions
-      </p>
-      <p>
-        Whether you're a farmer with excess products to contribute, a food bank owner, or would just
-        like to volunteer to help organize a program in your area, click below to join us and help
-        connect more families with local, healthy foods.
-      </p>
-      <a
-        class="btn btn-success btn-lg mt-3"
-        href="https://airtable.com/shrGgLrhqdGIaRNB9"
-        role="button"
-        >Join Us</a
-      >
+    <div class="jumbotron jumbotron-fluid text-center mb-0" id="section-join">
+      <div class="container">
+        <h2 class="display-4">Let's help more farmers and families</h2>
+        <p class="lead">
+          We need your help to grow Farm to Community to more meal delivery programs and regions
+        </p>
+        <p>
+          Whether you're a farmer with excess products to contribute, a food bank owner, or would
+          just like to volunteer to help organize a program in your area, click below to join us and
+          help connect more families with local, healthy foods.
+        </p>
+        <a
+          class="btn btn-success btn-lg mt-3"
+          href="https://airtable.com/shrGgLrhqdGIaRNB9"
+          role="button"
+          >Join Us</a
+        >
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
