--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link" href="#section-what">What We Do</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#section-started">How it Started</a>
+            <a class="nav-link" href="#section-started">Our Story</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#section-join">Get Involved</a>
@@ -209,6 +209,7 @@
               href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
               >Watertown Daily Times</a
             >
+            and are working on expanding the initiative to the Lowville school district.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
