Added copy and CTA to What We Do section; minor layout improvements

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
     </div>
 
-    <!-- How it Works section -->
+    <!-- What We Do section -->
     <div id="section-what" class="text-center">
       <h2 class="mb-5">What We Do</h2>
       <div class="container">
@@ -102,14 +102,26 @@
             <p>To local people in need</p>
           </div>
         </div>
+        <hr class="mb-4" />
+        <p>
+          We're a growing community using existing technologies like GoFundMe, Slack, & Facebook to
+          organize passionate volunteers and enable local impact. Whether you're a farmer with
+          excess foods, a food distributor, or would just like to volunteer to help run a program in
+          your area, we can help get you up and running.
+        </p>
+        <a
+          class="btn btn-outline-success btn-lg mt-3"
+          href="https://airtable.com/shrGgLrhqdGIaRNB9"
+          role="button"
+          >Join Us</a
+        >
       </div>
     </div>
 
-    <!-- About Section -->
+    <!-- Our Story -->
     <div id="section-started" class="text-center">
       <div class="container">
         <h2 class="mb-5">Our Story</h2>
-        <!-- <p class="lead">It began in Lewis County, NY</p> -->
         <p class="pb-5">
           In early April, when the COVID-19 pandemic forced restaurants and schools to shut down,
           and farmers were being forced to dump milk and throw out good food, one generous person in
