Clarified copy in top 2 sections

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1 class="display-4">Connecting Farms to Families</h1>
         <p class="lead">
           Farmers are struggling. Food is going to waste. Many families are hungry. <br />
-          Let's help connect the dots.
+          Let's help connect the dots in your area.
         </p>
         <a
           class="btn btn-success btn-lg"
@@ -87,27 +87,32 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
+            <i class="fas fa-hands-helping"></i>
+            <h4>1. Organize</h4>
+            <p>Local passionate volunteers</p>
+          </div>
+          <div class="col-sm">
             <i class="fas fa-hand-holding-usd"></i>
-            <h4>1. Fundraise</h4>
+            <h4>2. Fundraise</h4>
             <p>In the local community</p>
           </div>
           <div class="col-sm">
             <i class="fas fa-tractor"></i>
-            <h4>2. Buy Excess</h4>
+            <h4>3. Buy Excess</h4>
             <p>Foods from local farmers</p>
           </div>
           <div class="col-sm">
             <i class="fas fa-apple-alt"></i>
-            <h4>3. Give Food</h4>
+            <h4>4. Give Food</h4>
             <p>To local people in need</p>
           </div>
         </div>
         <hr class="mb-4" />
-        <p>
-          We're a growing community using existing technologies like GoFundMe, Slack, & Facebook to
-          organize passionate volunteers and enable local impact. Whether you're a farmer with
-          excess foods, a food distributor, or would just like to volunteer to help run a program in
-          your area, we can help get you up and running.
+        <p class="lead">
+          We're a growing community connecting local farms and families. We started in Lewis County,
+          NY and are working expand to more areas and food delivery systems. Whether you're a farmer
+          with excess foods, a food distributor, or would just like to volunteer to help run a
+          program in your area, we can get you up and running.
         </p>
         <a
           class="btn btn-outline-success btn-lg mt-3"
@@ -122,7 +127,7 @@
     <div id="section-started" class="text-center">
       <div class="container">
         <h2 class="mb-5">Our Story</h2>
-        <p class="pb-5">
+        <p class="lead pb-5">
           In early April, when the COVID-19 pandemic forced restaurants and schools to shut down,
           and farmers were being forced to dump milk and throw out good food, one generous person in
           Lewis County, NY decided to buy eggs from a farm that were otherwise going to waste and
