--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
         <a
           class="btn btn-success btn-lg"
-          href="https://airtable.com/shrGgLrhqdGIaRNB9"
+          href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
           >Join Us</a
         >
@@ -116,7 +116,7 @@
         </p>
         <a
           class="btn btn-outline-success btn-lg mt-3"
-          href="https://airtable.com/shrGgLrhqdGIaRNB9"
+          href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
           >Join Us</a
         >
@@ -260,7 +260,7 @@
         </p>
         <a
           class="btn btn-success btn-lg mt-3"
-          href="https://airtable.com/shrGgLrhqdGIaRNB9"
+          href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
           >Join Us</a
         >
