Switched from GA to Google Tag Manager

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://kit.fontawesome.com/40ffc7245d.js" crossorigin="anonymous"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!--
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167745315-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -31,10 +32,38 @@
 
       gtag("config", "UA-167745315-1");
     </script>
+  -->
+    <!-- End Google Analytics -->
+
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-T46FRRB");
+    </script>
+    <!-- End Google Tag Manager -->
 
     <title>Farm to Community</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-T46FRRB"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden;"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Farm to Community</a>
@@ -226,7 +255,8 @@
               href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
               >Watertown Daily Times</a
             >
-            and are working on expanding the initiative to the Lowville school district.
+            and are working on expanding the initiative to the Lowville, NY school district and
+            other areas.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
