Added IDs and classes for GA Event tracking

--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
           Let's help connect the dots in your area.
         </p>
         <a
-          class="btn btn-success btn-lg"
+          class="btn btn-success btn-lg btn-join"
           href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
+          id="btn-join3"
           >Join Us</a
         >
       </div>
@@ -144,9 +145,10 @@
           program in your area, we can get you up and running.
         </p>
         <a
-          class="btn btn-outline-success btn-lg mt-3"
+          class="btn btn-outline-success btn-lg mt-3 btn-join"
           href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
+          id="btn-join1"
           >Join Us</a
         >
       </div>
@@ -196,6 +198,7 @@
             class="btn btn-outline-success btn-lg mt-3 mb-5"
             href="https://www.gofundme.com/f/south-lewis-farm-to-community-1"
             role="button"
+            id="btn-donate"
             >Donate Now</a
           >
         </div>
@@ -220,13 +223,15 @@
             A team of school employees, farmers, agriculture experts and other volunteers formed to
             find local surplus farm foods and get them delivered to local families. A handful of
             tech and business experts from across the country also got involved through
-            <a href="https://covidaccelerator.com">COVID Accelerator</a>, putting technologies in
-            place to make the process more efficient and help scale Farm to Community to more areas.
+            <a href="https://covidaccelerator.com" id="link-ca">COVID Accelerator</a>, putting
+            technologies in place to make the process more efficient and help scale Farm to
+            Community to more areas.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
             href="https://www.facebook.com/LCFarmToCommunity"
             role="button"
+            id="btn-facebook"
             >Follow Us on Facebook</a
           >
         </div>
@@ -250,18 +255,14 @@
           <p class="lead">
             So far we've arranged deliveries of local milk, maple syrup, eggs, cheese sticks, and
             fresh produce to the families of the South Lewis Central School district. We were
-            recently featured in the local
-            <a
-              href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
-              >Watertown Daily Times</a
-            >
-            and are working on expanding the initiative to the Lowville, NY school district and
-            other areas.
+            recently featured in the local Watertown Daily Times and are working on expanding the
+            initiative to the Lowville, NY school district and other areas.
           </p>
           <a
             class="btn btn-outline-success btn-lg mt-3 mb-5"
             href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
             role="button"
+            id="btn-news"
             >Read More</a
           >
         </div>
@@ -289,9 +290,10 @@
           help connect more families with local, healthy foods.
         </p>
         <a
-          class="btn btn-success btn-lg mt-3"
+          class="btn btn-success btn-lg mt-3 btn-join"
           href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
+          id="btn-join2"
           >Join Us</a
         >
       </div>
