--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#section-join">Get Involved</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://airtable.com/shrl1xHXURYjQnGti">Contact Us</a>
+          </li>
         </ul>
       </div>
     </nav>
