'Join Us' to 'Get Inolved'; external links in new tabs

--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
             <a class="nav-link" href="#section-started">Our Story</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#section-join">Get Involved</a>
+            <a class="nav-link" href="https://airtable.com/shrl1xHXURYjQnGti">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://airtable.com/shrl1xHXURYjQnGti">Contact Us</a>
+            <a class="nav-link btn btn-success btn-join" id="join0" href="#section-join"
+              >Get Involved</a
+            >
           </li>
         </ul>
       </div>
@@ -109,7 +111,7 @@
           href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
           id="btn-join3"
-          >Join Us</a
+          >Get Involved</a
         >
       </div>
     </div>
@@ -152,7 +154,7 @@
           href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
           id="btn-join1"
-          >Join Us</a
+          >Get Involved</a
         >
       </div>
     </div>
@@ -202,6 +204,7 @@
             href="https://www.gofundme.com/f/south-lewis-farm-to-community-1"
             role="button"
             id="btn-donate"
+            target="_blank"
             >Donate Now</a
           >
         </div>
@@ -235,6 +238,7 @@
             href="https://www.facebook.com/LCFarmToCommunity"
             role="button"
             id="btn-facebook"
+            target="_blank"
             >Follow Us on Facebook</a
           >
         </div>
@@ -266,6 +270,7 @@
             href="https://www.nny360.com/top_stories/farm-food-finds-it-way-to-south-lewis-families-through-the-farm-to-community-program/article_98a7f989-6cdb-5695-b6d7-1f67edcc1896.html"
             role="button"
             id="btn-news"
+            target="_blank"
             >Read More</a
           >
         </div>
@@ -280,7 +285,7 @@
     </div>
     <!-- /END THE FEATURETTES -->
 
-    <!-- Join Us CTA -->
+    <!-- Get Involved CTA -->
     <div class="jumbotron jumbotron-fluid text-center mb-0" id="section-join">
       <div class="container">
         <h2 class="display-4">Let's help more farmers and families</h2>
@@ -297,7 +302,7 @@
           href="https://airtable.com/shrGgLrhqdGIaRNB9?prefill_Newsletter=1"
           role="button"
           id="btn-join2"
-          >Join Us</a
+          >Get Involved</a
         >
       </div>
     </div>
