--- a/index.html
+++ b/index.html
@@ -307,6 +307,16 @@
       </div>
     </div>
 
+    <!-- Footer section -->
+    <footer id="section-footer" class="text-center ml-0 mr-0 pb-2 pt-2">
+      <a href="https://www.facebook.com/LCFarmToCommunity" target="_blank"
+        ><i class="fab fa-facebook-square social-icon"></i
+      ></a>
+      <a href="https://airtable.com/shrl1xHXURYjQnGti"
+        ><i class="fas fa-envelope-square social-icon"></i
+      ></a>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
