Added Resources to menu

--- a/index.html
+++ b/index.html
@@ -86,6 +86,29 @@
           <li class="nav-item">
             <a class="nav-link" href="#section-started">Our Story</a>
           </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarResources"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Resources
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarResources">
+              <a
+                class="dropdown-item"
+                href="https://docs.google.com/document/d/e/2PACX-1vRqGFITm-NBLPk4FE9yeBOnoOdOZP6msN8-1D1hbet2FnkNiuzkYP_77VA8cv_NI0kPDCjzu6vJlRmH/pub"
+                >Startup Guide</a
+              >
+              <a class="dropdown-item" href="https://bit.ly/f2c-coupons"
+                >Farmers Market Coupon Program</a
+              >
+            </div>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="https://airtable.com/shrl1xHXURYjQnGti">Contact Us</a>
           </li>
